contacts-deployment/k8s/contact-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'contact-backend-deployment'
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: contacts-backend
  template:
    metadata:
      labels:
        component: contacts-backend
    spec:
        containers:
          - name: contacts-api
            image: bhavanaaz400/contacts-backend
            ports:
              - containerPort: 8080
