contacts-deployment/k8s/contact-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-frontend-deployment
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      component: contacts-frontend
  template:
    metadata:
      labels:
        component: contacts-frontend
    spec:
      containers:
        - name: contacts-frontend
          image: bhavanaaz400/contacts-frontend
          ports:
            - containerPort: 4200
