contacts-deployment/k8s/contact-backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-backend-server-cluster-ip
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: contacts-backend
  ports:
   - port: 8080
     targetPort: 8080
