contacts-deployment/k8s/ingress-service.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: contact-frontend-cluster-ip-service
              servicePort: 4200
          - path: /backend/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: contact-backend-server-cluster-ip
              servicePort: 8080
